--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,10 +1,22 @@
+database:
+  image: "postgres"
+
+  ports:
+    - "5432:5432"
+  environment:
+    - POSTGRES_USER=root
+    - POSTGRES_PASSWORD=1234
+    - POSTGRES_MULTIPLE_DATABASES=boards,players,games
+
+
 fileio:
-  image: fileio:latest<localBuild>
+  image: fileio:0.1.0-SNAPSHOT<localBuild>
   ports:
-    - "0:9002"
+    - "9002:9002"
+  stdin_open: true
+
 board:
-  image: board:latest<localBuild>
+  image: board:0.1.0-SNAPSHOT<localBuild>
   ports:
-    - "0:9003"
-global:
-  image: global:latest<localBuild>
+    - "9003:9003"
+  stdin_open: true
