--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,12 @@ database:
     - POSTGRES_USER=root
     - POSTGRES_PASSWORD=1234
 
-
-
-
-
+mongo:
+  image: mongo
+  restart: always
+  ports:
+    - "27017:27017"
+  environment:
+    MONGO_INITDB_ROOT_USERNAME: root
+    MONGO_INITDB_ROOT_PASSWORD: example
 
